WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194582
Release assert in PolicyCheckIdentifier::isValidFor via WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction
https://bugs.webkit.org/show_bug.cgi?id=194582
Summary
Release assert in PolicyCheckIdentifier::isValidFor via WebFrameLoaderClient:...
Ryosuke Niwa
Reported
2019-02-12 22:06:53 PST
We're hitting a release assertion in PolicyCheckIdentifier::isValidFor when WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction fails to send a sync IPC.
Attachments
Fixes the bug
(4.07 KB, patch)
2019-02-12 22:12 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2019-02-12 22:07:07 PST
<
rdar://problem/47941089
>
Ryosuke Niwa
Comment 2
2019-02-12 22:12:58 PST
Created
attachment 361895
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2019-02-13 01:01:51 PST
Comment on
attachment 361895
[details]
Fixes the bug Clearing flags on attachment: 361895 Committed
r241352
: <
https://trac.webkit.org/changeset/241352
>
Ryosuke Niwa
Comment 4
2019-02-13 01:01:52 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 5
2019-02-13 08:39:18 PST
Not even a PSON bug :P
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug